test/fixtures/commonmark/bad.txt
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1884

.
``` ```
aaa
.
<p><code> </code>
aaa</p>
.

error:

<p><code></code>
aaa</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 1995

.
~~~ aa ``` ~~~
foo
~~~
.
<pre><code class="language-aa">foo
</code></pre>
.

error:

<p>~~~ aa ``` ~~~
foo</p>
<pre><code></code></pre>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 2844

.
[Foo bar]:
<my url>
'title'

[Foo bar]
.
<p><a href="my%20url" title="title">Foo bar</a></p>
.

error:

<p>[Foo bar]:
<my url>
'title'</p>
<p>[Foo bar]</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5176

.
- a
 - b
  - c
   - d
    - e
.
<ul>
<li>a</li>
<li>b</li>
<li>c</li>
<li>d
- e</li>
</ul>
.

error:

<ul>
<li>a</li>
<li>b</li>
<li>c</li>
<li>d</li>
<li>e</li>
</ul>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5196

.
1. a

  2. b

    3. c
.
<ol>
<li>
<p>a</p>
</li>
<li>
<p>b</p>
</li>
</ol>
<pre><code>3. c
</code></pre>
.

error:

<ol>
<li>
<p>a</p>
</li>
<li>
<p>b</p>
</li>
<li>
<p>c</p>
</li>
</ol>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5898

.
`  ``  `
.
<p><code> `` </code></p>
.

error:

<p><code>``</code></p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5907

.
` a`
.
<p><code> a</code></p>
.

error:

<p><code>a</code></p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5916

.
` b `
.
<p><code> b </code></p>
.

error:

<p><code>b</code></p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5924

.
` `
`  `
.
<p><code> </code>
<code>  </code></p>
.

error:

<p><code></code>
<code></code></p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5935

.
``
foo
bar  
baz
``
.
<p><code>foo bar   baz</code></p>
.

error:

<p><code>foo bar baz</code></p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5945

.
``
foo 
``
.
<p><code>foo </code></p>
.

error:

<p><code>foo</code></p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 5956

.
`foo   bar 
baz`
.
<p><code>foo   bar  baz</code></p>
.

error:

<p><code>foo bar baz</code></p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 6912

.
foo***bar***baz
.
<p>foo<em><strong>bar</strong></em>baz</p>
.

error:

<p>foo***bar***baz</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 6918

.
foo******bar*********baz
.
<p>foo<strong><strong><strong>bar</strong></strong></strong>***baz</p>
.

error:

<p>foo******bar*********baz</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 7542

.
[link](</my uri>)
.
<p><a href="/my%20uri">link</a></p>
.

error:

<p>[link](&lt;/my uri&gt;)</p>


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 9240

.
`code 
span`
.
<p><code>code  span</code></p>
.

error:

<p><code>code span</code></p>


